--- a/src/components/cards/cards.css
+++ b/src/components/cards/cards.css
@@ -1,3 +1,7 @@
+.cards{
+    margin-bottom: 5rem;
+}
+
 .section_title{
     justify-content: center;
     margin-bottom: 7rem;
@@ -15,8 +19,6 @@
 .scale{
     scale: 1.2;
 }
-
-
 
 .space-between{
     justify-content: space-between;
