--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
 
   --body-font:'Poppins', sans-serif;
 
-
+  --bigg-font-size:5rem;
   --big-font-size:3rem;
   --h1-font-size:2.25rem;
   --h2-font-size:1.5rem;
@@ -24,6 +24,7 @@
   --normal-font-size: 1rem;
   --small-font-size:0.813rem;
   --tiny-font-size:0.625rem;
+  
 
   /* =========FONTWEIGHT========*/
 
@@ -54,6 +55,7 @@
 @media screen and (max-width: 992px){
   :root{
 
+    --bigg-font-size:3rem;
     --big-font-size:2.75rem;
     --h1-font-size:1.5rem;
     --h2-font-size:1.25rem;
@@ -75,6 +77,7 @@
 
   html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
   }
 
   body,
@@ -110,27 +113,33 @@
   }
 
   img{
-    max-width: 100%;
+    width: 100%;
     height: auto;
   }
  
-  .section{
+.section{
     padding:6rem 1rem 2rem;
   }
 
-  .container{
+.container{
     max-width: 1600px;
     margin-left: auto;
     margin-right: auto;
   }
 
-  .flex{
+.flex{
     display: flex;
 }
+
 
 .flex-col{
   display: flex;
   flex-direction: column;
+}
+
+.flex-reverse{
+  display: flex;
+  flex-direction: row-reverse;
 }
 
 .grid{
@@ -140,7 +149,15 @@
 .p2{
   padding: 2rem;
 }
+.p5{
+  padding: 5rem;
+}
 
 p{
   font-size: var(--small-font-size);
 }
+
+.green{
+  color: #01390C;
+}
+
