--- a/src/App.css
+++ b/src/App.css
@@ -146,11 +146,24 @@
   display: grid;
 }
 
-.p2{
-  padding: 2rem;
+.p1{
+  padding: 1rem;
 }
+
+.p2{
+  padding: 1.3rem;
+}
+
 .p5{
   padding: 5rem;
+}
+
+.m1{
+  margin-bottom: 1rem;
+}
+
+.m2{
+  margin-bottom: 2rem;
 }
 
 p{
