--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,8 +1,16 @@
-.container{
+.home .container-home .produit {
+    transition: transform 0.3s ease;
+  }
+  
+  /* Styles for PC mode (screen width >= 1024px) */
+
+
+.container-home{
     display: grid;
-    grid-template-columns: repeat(3, 1fr); 
+    grid-template-columns: repeat(2, 1fr); 
     align-items: center;
     gap: 5rem;
+    min-height: 100vh;
 }
 
 .title{
@@ -37,8 +45,12 @@
 
 .home_image{
     display: flex;
+    flex-direction: row;
+    
+}
+
+.produit{
     flex-direction: column;
-    align-items: center;
 }
 
 
@@ -55,6 +67,30 @@
 
 }
 
+.swiper {
+    width: 100%;
+    height: 100%;
+  }
+  
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+  
+    /* Center slide text vertically */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+
 @media screen and (max-width: 992px){
     .home{
         display: flex;
@@ -62,7 +98,7 @@
     .home_intro{
         text-align: center;
     }
-    .container{ 
+    .container-home{ 
         grid-template-columns: repeat(1, 1fr); 
     }
 
@@ -71,3 +107,9 @@
     }
 
 }
+
+@media screen and (min-width: 1024px) {
+    .home .container-home .produit.swiper-slide-active {
+      transform: scale(1.5); /* Adjust the scale factor as needed */
+    }
+  }
