--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,17 +1,55 @@
-.home .container-home .produit {
-    transition: transform 0.3s ease;
+.container-home{
+    display: flex;
+    flex-direction: row;
+  
+    align-items: center;
+    min-height: 100vh;
+    width: 100%;
+}
+
+.home_intro{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    padding: 5rem;
+}
+
+.swiper-container {
+    width: 50%;
   }
   
-  /* Styles for PC mode (screen width >= 1024px) */
-
-
-.container-home{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr); 
-    align-items: center;
-    gap: 5rem;
-    min-height: 100vh;
+.home .container-home .produit {
+    transition: transform 0.3s ease;
 }
+  
+.produit{
+    display: flex;
+    flex-direction: column;
+    gap: 5rem; 
+}
+
+.bb1,
+.bb2,
+.bb3 {
+  position: absolute;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  transform: translate(-50%, -50%) scale(0.4); /* Adjust the scale factor as needed */
+}
+
+ 
+.scaled-image {
+    transform: scale(1.8); 
+  }
+
+  .active .bb1,
+  .active .bb2,
+  .active .bb3 {
+    opacity: 1;
+  }
+
+
 
 .title{
     font-size:var(--big-font-size) ;
@@ -23,6 +61,12 @@
     padding: 1rem 3rem 1rem 3rem;
     border-radius: 3rem;
     color: white;
+}
+
+.bb1, .bb2, .bb3 {
+    position: absolute;
+    z-index: -1;
+    /* Adjust the positioning and size as needed */
 }
 
 .description{
@@ -49,11 +93,6 @@
     
 }
 
-.produit{
-    flex-direction: column;
-}
-
-
 .products{
     gap: 3rem;
     align-items: center;
@@ -67,49 +106,24 @@
 
 }
 
-.swiper {
-    width: 100%;
-    height: 100%;
-  }
-  
-  .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
-  
-    /* Center slide text vertically */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  
+.swiper-wrapper{
+    gap: 2rem;
+ 
+}
+ 
+
 
 @media screen and (max-width: 992px){
-    .home{
-        display: flex;
-    }
-    .home_intro{
-        text-align: center;
-    }
-    .container-home{ 
-        grid-template-columns: repeat(1, 1fr); 
-    }
-
-    .products{
-        justify-content: center;
+    .container-home{
+        flex-direction: column-reverse;
+        gap: 5rem;
     }
 
 }
 
 @media screen and (min-width: 1024px) {
     .home .container-home .produit.swiper-slide-active {
-      transform: scale(1.5); /* Adjust the scale factor as needed */
+      transform: scale(1.5);
+       /* Adjust the scale factor as needed */
     }
   }
