--- a/src/components/comment/comment.css
+++ b/src/components/comment/comment.css
@@ -24,12 +24,16 @@
   .swiper-slide {
     text-align: center;
     font-size: 18px;
-    background: transparent;
+    
   
     /* Center slide text vertically */
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+
+  .mySwiper.bg-tr{
+    background: transparent;
   }
   
   .swiper-slide img {
