--- a/src/App.css
+++ b/src/App.css
@@ -52,11 +52,11 @@
   --z-modal:1000;
 }
 
-@media screen and (max-width: 992px){
+@media screen and (max-width: 1100px){
   :root{
 
     --bigg-font-size:3rem;
-    --big-font-size:2.75rem;
+    --big-font-size:2rem;
     --h1-font-size:1.5rem;
     --h2-font-size:1.25rem;
     --h3-font-size:1rem;
@@ -108,19 +108,23 @@
     text-decoration: none;
   }
 
-  button {
-    cursor: pointer;
-    border: none;
-    outline: none;
-  }
 
-  img{
+button{
+  cursor: pointer;
+}
+
+img{
     width: 100%;
-    height: auto;
+    height: 100%;
   }
  
+ 
+  .App {
+    position: relative;
+  }
+   
 .section{
-    padding:6rem 1rem 2rem;
+    padding:10rem 0;
   }
 
 .container{
@@ -183,6 +187,29 @@ p{
   font-size: var(--small-font-size);
 }
 
+.green-blurred-div {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 15%; 
+  height: 100vh;
+  background-color: #D6FFDD; 
+  filter: blur(90px); 
+  z-index: -1;
+}
+
+
+.green-blurred-div-right {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 15%; /* Adjust width as needed */
+  height: 100vh;
+  background-color: #D6FFDD; /* Green with 50% opacity */
+  filter: blur(90px); /* Increased blur radius */
+  z-index: -1; /* Ensure it's behind other content */
+}
+
 a{
   text-decoration: none;
   color: #01390C;
@@ -198,9 +225,9 @@ a{
 }
 
 
-.App{
+@media screen and (max-width: 650px){
+  .section{
+    padding:4rem 0;
+  }
   
-  height: 100vh;
 }
-
-
