--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -68,12 +68,14 @@
       flex-direction: column;
       gap: 1rem;
       background: #01390C;
+      
       left: 0;
-      width: 40%;
+      width: 100%;
+     
      
       transform: translateX(-100%);
       transition: all .45s;
-      border-radius: 0 0 2rem 0rem;
+      
     }
   
     .Navbar > .nav-items > a::before {
@@ -98,6 +100,7 @@
       width: 32px;
       height: 2px;
       background: #01390C;
+      
       transition: all 0.45s ease-in-out;
     }
   
@@ -138,6 +141,8 @@
   
     .Navbar > .nav-items > a {
         color: #ffffff;
+        border-bottom: 1px rgb(194, 194, 194) solid;
+        padding-bottom: 10px;
         
       }
       
