--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,7 +1,6 @@
 .container-home{
     display: flex;
     flex-direction: row;
-  
     align-items: center;
     min-height: 100vh;
     width: 100%;
@@ -35,7 +34,8 @@
   position: absolute;
   opacity: 0;
   transition: opacity 0.3s ease;
-  transform: translate(-50%, -50%) scale(0.4); /* Adjust the scale factor as needed */
+  transform: translate(-50%, -50%) scale(0.4);
+  /* Adjust the scale factor as needed */
 }
 
  
@@ -53,7 +53,7 @@
 
 .title{
     font-size:var(--big-font-size) ;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
 
 .button{
@@ -100,30 +100,23 @@
 
 .button-outline{
     border: 2px solid black;
-    padding: 1rem 2rem 1rem 2rem;
+    padding: 0.5rem 1rem 0.5rem 1rem;
     border-radius: 3rem;
     background-color: transparent;
 
 }
 
-.swiper-wrapper{
-    gap: 2rem;
- 
-}
+
  
 
 
 @media screen and (max-width: 992px){
     .container-home{
-        flex-direction: column-reverse;
-        gap: 5rem;
+        flex-direction: column-reverse;     
     }
-
 }
 
-@media screen and (min-width: 1024px) {
-    .home .container-home .produit.swiper-slide-active {
-      transform: scale(1.5);
-       /* Adjust the scale factor as needed */
-    }
-  }
+.home_intro{
+    width: 100%;
+}
+
