--- a/src/components/panel/panel.css
+++ b/src/components/panel/panel.css
@@ -1,6 +1,8 @@
 #Panel {
     height: 100%;
+    
   }
+
 
 .swiper {
     width: 100%;
@@ -8,17 +10,30 @@
     
   }
   
+
+  .bg-ye{
+    
+    background: linear-gradient(180deg, rgba(249,229,141,1) 0%, rgba(255,255,255,1) 100%);
+  }
+  .bg-pink{
+    
+    background: linear-gradient(180deg, rgba(255,178,255,1) 0%, rgba(255,255,255,1) 100%);
+  }
+  .bg-blue{
+  
+background: linear-gradient(180deg, rgba(141,204,255,1) 0%, rgba(255,255,255,1) 100%);
+  }
+
+
   .swiper-slide {
     text-align: center;
     font-size: 18px;
-    background: #fff;
-  
-    /* Center slide text vertically */
+   
+
     display: flex;
     justify-content: center;
     align-items: center;
-    background: rgb(249,229,141);
-    background: linear-gradient(180deg, rgba(249,229,141,1) 0%, rgba(255,255,255,1) 100%);
+    
   }
   
   .swiper-slide img {
@@ -30,7 +45,7 @@
   }
 
   .container-panel {
-    display: flex;
+    
     width: 100%;
     height: 100%;
     padding: 7rem 0 0 7rem;
@@ -71,4 +86,14 @@
     color: #01390C; 
    
 }
+@media screen and (max-width: 1310px){
+  .container-panel {
+    flex-direction: column;
+   
+  }
 
+  .container-panel {
+   
+    padding: 0rem;
+}
+}
