--- a/src/components/testimonial/testimonial.css
+++ b/src/components/testimonial/testimonial.css
@@ -36,7 +36,7 @@
     gap: 10px;
     color: black;
     margin-bottom: 1rem;
-    justify-content: center;
+ 
 }
 
 .button-white{
@@ -46,17 +46,21 @@
     color: #01390C;
 }
 
+.rate-img{
+    width: 30%;
+    height: 90%;
+}
+
 @media screen and (max-width: 1310px){
     .adjust{
-        grid-template-columns: repeat(1, 80%); 
-        
+        grid-template-columns: repeat(1, 100%); 
         gap: 1rem; 
         justify-content: center;    
     }
     
     .box-title{
         align-items: center;   
-        border-radius: 12rem 12rem 1rem 1rem;
+        border-radius: 12rem 1rem 1rem 1rem;
         text-align: center;
     }
 
@@ -65,5 +69,7 @@
         align-content: center;       
     }
 
+   
+    
 
 }
