--- a/src/App.css
+++ b/src/App.css
@@ -96,7 +96,7 @@
   }
 
   h1,h2,h3 {
-    color: var(--title-color);
+   
     font-weight: var(--font-semi-bold);
   }
 
@@ -113,10 +113,7 @@ button{
   cursor: pointer;
 }
 
-img{
-    width: 100%;
-    height: 100%;
-  }
+
  
  
   .App {
@@ -171,8 +168,11 @@ img{
   padding: 1.3rem;
 }
 
-.p5{
-  padding: 5rem;
+.p2{
+  padding: 2rem;
+}
+.p4{
+  padding: 4rem;
 }
 
 .m1{
@@ -190,11 +190,11 @@ p{
 .green-blurred-div {
   position: fixed;
   top: 0;
-  left: 0;
+  left: -100px;
   width: 15%; 
   height: 100vh;
   background-color: #D6FFDD; 
-  filter: blur(90px); 
+  filter: blur(100px); 
   z-index: -1;
 }
 
@@ -206,7 +206,7 @@ p{
   width: 15%; /* Adjust width as needed */
   height: 100vh;
   background-color: #D6FFDD; /* Green with 50% opacity */
-  filter: blur(90px); /* Increased blur radius */
+  filter: blur(100px); /* Increased blur radius */
   z-index: -1; /* Ensure it's behind other content */
 }
 
