--- a/src/components/comment/comment.css
+++ b/src/components/comment/comment.css
@@ -12,34 +12,14 @@
     width: 85%;
     align-self: center;
     border-radius: 1rem;
-    margin-top: 20px; /* Adjust margin as needed */
+    margin-top: 20px;
+    box-shadow: 0px 12px 10px rgba(0, 0, 0, 0.2); 
+     /* Adjust margin as needed */
 }
 
 
-.swiper {
-    width: 100%;
-    height: 100%;
-  }
-  
-  .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    
-  
-    /* Center slide text vertically */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
 
-  .mySwiper.bg-tr{
-    background: transparent;
-  }
+ 
   
-  .swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
+  
 
