--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,59 +1,26 @@
-.container-home{
+.home-section{
+    position: relative;
+    background: rgb(72, 135, 187);
+background: linear-gradient(180deg, rgba(141,204,255,1) 0%, rgba(255,255,255,1) 100%);
+
+}
+
+.water-container3 {
+    position: absolute;
+      bottom: 0px;
+      right: 120px;
+    }
+.home-container{
     display: flex;
-    flex-direction: row;
     align-items: center;
-    min-height: 100vh;
-    width: 100%;
+    gap: 5rem;
+    justify-content: center;
+    padding: 3rem;
 }
-
-.home_intro{
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    padding: 5rem;
-}
-
-.swiper-container {
-    width: 50%;
-  }
-  
-.home .container-home .produit {
-    transition: transform 0.3s ease;
-}
-  
-.produit{
-    display: flex;
-    flex-direction: column;
-    gap: 5rem; 
-}
-
-.bb1,
-.bb2,
-.bb3 {
-  position: absolute;
-  opacity: 0;
-  transition: opacity 0.3s ease;
-  transform: translate(-50%, -50%) scale(0.4);
-  /* Adjust the scale factor as needed */
-}
-
- 
-.scaled-image {
-    transform: scale(1.8); 
-  }
-
-  .active .bb1,
-  .active .bb2,
-  .active .bb3 {
-    opacity: 1;
-  }
-
-
 
 .title{
     font-size:var(--big-font-size) ;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
 }
 
 .button{
@@ -61,12 +28,6 @@
     padding: 1rem 3rem 1rem 3rem;
     border-radius: 3rem;
     color: white;
-}
-
-.bb1, .bb2, .bb3 {
-    position: absolute;
-    z-index: -1;
-    /* Adjust the positioning and size as needed */
 }
 
 .description{
@@ -89,34 +50,48 @@
 
 .home_image{
     display: flex;
-    flex-direction: row;
-    
+    flex-direction: column;
+    align-items: center;
 }
 
+
 .products{
+    display: flex;
     gap: 3rem;
     align-items: center;
+    
 }
 
 .button-outline{
     border: 2px solid black;
-    padding: 0.5rem 1rem 0.5rem 1rem;
+    padding: 1rem 2rem 1rem 2rem;
     border-radius: 3rem;
     background-color: transparent;
 
 }
 
 
- 
-
 
 @media screen and (max-width: 992px){
-    .container-home{
-        flex-direction: column-reverse;     
+
+    .home-container{
+        flex-direction: column-reverse;
+    }
+    
+    .home{
+        display: flex;
+    }
+    .home_intro{
+        text-align: center;
+    }
+    .container{ 
+        grid-template-columns: repeat(1, 1fr); 
+    }
+
+    .products{
+        display: none;
+    }
+    .water{
+        display: none;
     }
 }
-
-.home_intro{
-    width: 100%;
-}
-
