--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -1,3 +1,10 @@
 .product-image{
     max-width: 50%;
 }
+
+@media screen and (max-width:1150px){
+    .product-champ{
+        display: none;
+    }
+    
+}
