--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: myfont;
+  font-family: myfontbold;
+  font-family: myfontlight;
+  src: url(../../RecklessRegular.ttf);
+  src: url(../../RecklessBold.ttf);
+  src: url(../../RecklessLight.ttf);
+}
 :root{
 
   --header-height:3rem;
@@ -14,7 +22,7 @@
   /* ========FONT and TYPOGRAPHY ==========*/
   
 
-  --body-font:'Poppins', sans-serif;
+  
 
   --bigg-font-size:5rem;
   --big-font-size:3rem;
@@ -55,8 +63,8 @@
 @media screen and (max-width: 1100px){
   :root{
 
-    --bigg-font-size:3rem;
-    --big-font-size:2rem;
+    --bigg-font-size:1.9rem;
+    --big-font-size:1.5rem;
     --h1-font-size:1.5rem;
     --h2-font-size:1.25rem;
     --h3-font-size:1rem;
@@ -90,13 +98,12 @@
     
   }
 
-  body{
+  body{   
+    scroll-behavior: smooth;
     
-    color: var(--text-color);
   }
 
   h1,h2,h3 {
-   
     font-weight: var(--font-semi-bold);
   }
 
@@ -111,7 +118,24 @@
 
 button{
   cursor: pointer;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  transition: 0.3s;
+  outline: 0;
+  
 }
+
+button:hover{
+  transform: scale(1.1);
+}
+
+.apple{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.justify-center{
+  justify-content: center;
+}
+
 
 
  
@@ -158,6 +182,10 @@ button{
 
 .gap2{
   gap: 2rem;
+}
+
+.gap3{
+  gap: 3rem;
 }
 
 .p1{
@@ -224,10 +252,27 @@ a{
   color: white;
 }
 
+.black{
+  color: black;
+}
+
+
+.text-start{
+  text-align: start;
+}
+
+@media screen and (max-width: 1300px){
+  
+ 
+  
+}
+
 
 @media screen and (max-width: 650px){
   .section{
     padding:4rem 0;
   }
+
+
   
 }
