--- a/src/components/cards/cards.css
+++ b/src/components/cards/cards.css
@@ -29,6 +29,8 @@
 .radius{
     border-radius: 2rem;
     border: 1px rgb(236, 236, 236) solid;
+    color: #000;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     
 }
 
