--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -21,6 +21,7 @@ background: linear-gradient(180deg, rgba(141,204,255,1) 0%, rgba(255,255,255,1) 
 .title{
     font-size:var(--big-font-size) ;
     margin-bottom: 2rem;
+    color: #000;
 }
 
 .button{
@@ -32,6 +33,9 @@ background: linear-gradient(180deg, rgba(141,204,255,1) 0%, rgba(255,255,255,1) 
 
 .description{
     margin-bottom: 4rem;
+    color: #000;
+    font-weight: 600;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .text-center{
@@ -70,6 +74,33 @@ background: linear-gradient(180deg, rgba(141,204,255,1) 0%, rgba(255,255,255,1) 
 
 }
 
+.size img {
+    transition: 0.3s;/* Adjust the degree of rotation as needed */
+}
+
+.size img:hover {
+    transform: scale(1.1) rotate(-8deg); /* Adjust the degree of rotation as needed */
+}
+
+
+.image-home img {
+    transition: 0.3s;
+}
+
+.image-home img:hover {
+    transform: scale(1.1) rotate(5deg); /* Adjust the degree of rotation as needed */
+}
+
+
+@media screen and (max-width: 1600px){
+
+    
+
+    .products{
+        display: none;
+    }
+    
+}
 
 
 @media screen and (max-width: 992px){
@@ -92,6 +123,9 @@ background: linear-gradient(180deg, rgba(141,204,255,1) 0%, rgba(255,255,255,1) 
         display: none;
     }
     .water{
+        display: none;
+    }
+    .card{
         display: none;
     }
 }
