--- a/src/components/panel/panel.css
+++ b/src/components/panel/panel.css
@@ -65,8 +65,10 @@ background: linear-gradient(180deg, rgba(141,204,255,1) 0%, rgba(255,255,255,1) 
 }
 
 .paragraph{
-    font-size: var(--h3-font-size);
+    font-size: var(--normal-font-size);
     margin-bottom: 2rem;
+    font-weight: 600;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .big-title{
