--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,9 @@
 @font-face {
   font-family: myfont;
-  font-family: myfontbold;
-  font-family: myfontlight;
   src: url(../../RecklessRegular.ttf);
-  src: url(../../RecklessBold.ttf);
-  src: url(../../RecklessLight.ttf);
+  
 }
+
 :root{
 
   --header-height:3rem;
@@ -23,10 +21,11 @@
   
 
   
-
-  --bigg-font-size:5rem;
-  --big-font-size:3rem;
-  --h1-font-size:2.25rem;
+  --title-panel:75px;
+  --quiz-title:65px;
+  --bigg-font-size:58px;
+  --big-font-size:54px;
+  --h1-font-size:40px;
   --h2-font-size:1.5rem;
   --h3-font-size:1.25rem;
   --normal-font-size: 1.1rem;
@@ -132,30 +131,34 @@ button:hover{
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.thin{
+  font-family: 600;
+}
+
 .justify-center{
   justify-content: center;
 }
 
 
-
- 
- 
-  .App {
-    position: relative;
-  }
+.App {
+  position: relative;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+   
+}
    
 .section{
-    padding:10rem 0;
-  }
+  padding:8rem 0;
+}
 
 .container{
-    max-width: 1600px;
-    margin-left: auto;
-    margin-right: auto;
-  }
+  max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 .flex{
-    display: flex;
+  display: flex;
 }
 
 .flex-col{
@@ -188,6 +191,10 @@ button:hover{
   gap: 3rem;
 }
 
+.gap5{
+  gap: 5rem;
+}
+
 .p1{
   padding: 1rem;
 }
@@ -215,6 +222,12 @@ p{
   font-size: var(--small-font-size);
 }
 
+.title {
+  font-size: var(--h1-font-size);
+  margin-bottom: 1rem;
+  
+}
+
 .green-blurred-div {
   position: fixed;
   top: 0;
@@ -222,7 +235,7 @@ p{
   width: 15%; 
   height: 100vh;
   background-color: #D6FFDD; 
-  filter: blur(100px); 
+  filter: blur(90px); 
   z-index: -1;
 }
 
@@ -234,7 +247,7 @@ p{
   width: 15%; /* Adjust width as needed */
   height: 100vh;
   background-color: #D6FFDD; /* Green with 50% opacity */
-  filter: blur(100px); /* Increased blur radius */
+  filter: blur(90px); /* Increased blur radius */
   z-index: -1; /* Ensure it's behind other content */
 }
 
