--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -7,6 +7,8 @@
     align-items: center;
     background: transparent;
     width: 100%;
+    margin-top: 0.5rem;
+    padding: 1rem;
 }
 
 
@@ -20,6 +22,7 @@
 
   .Navbar > .nav-logo > a{
     padding-left: 1rem;
+    font-weight: 400;
     
   }
   
@@ -27,6 +30,7 @@
     
     font-size: var(--h3-font-size);
     text-decoration: none;
+    font-weight: 400;
     margin: 15px;
     position: relative;
     opacity: 0.9;
