--- a/src/components/panel/panel.css
+++ b/src/components/panel/panel.css
@@ -3,6 +3,9 @@
     
   }
 
+  .relative{
+    position: relative;
+  }
 
 .swiper {
     width: 100%;
@@ -55,6 +58,29 @@ background: linear-gradient(180deg, rgba(141,204,255,1) 0%, rgba(255,255,255,1) 
     flex: 1; /* This will make it take up half of the available space */
 }
 
+.green-blurred-div-home-panel {
+  position: absolute;
+  bottom: -120px;
+  left: -96px;
+  width: 40%;
+  height: 35%;
+  background-color: #D6FFDD; 
+  filter: blur(85px);
+  z-index: 999;
+}
+
+.green-blurred-div-right-home-panel {
+  position: absolute;
+  bottom: -150px;
+  right: -96px;
+  width: 40%;
+  height: 31%;
+  background-color: #D6FFDD; /* Green with 50% opacity */
+  filter: blur(85px); /* Increased blur radius */
+  z-index: 999; /* Ensure it's behind other content */
+}
+
+
 .container-panel-desc {
     flex: 1; /* This will make it take up half of the available space */
     justify-content: center;
@@ -67,7 +93,6 @@ background: linear-gradient(180deg, rgba(141,204,255,1) 0%, rgba(255,255,255,1) 
 .paragraph{
     font-size: var(--normal-font-size);
     margin-bottom: 2rem;
-    font-weight: 600;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -82,6 +107,10 @@ background: linear-gradient(180deg, rgba(141,204,255,1) 0%, rgba(255,255,255,1) 
     border-radius: 3rem;
     color: white;
 
+}
+
+.panel-title{
+  font-size: var(--title-panel);
 }
 
 .swiper-button-next, .swiper-button-prev {
