--- a/src/components/social/social.css
+++ b/src/components/social/social.css
@@ -1,15 +1,15 @@
-.social-container{
+.social-container {
     position: relative;
     gap: 1rem;
 }
 
-.social-content{
+.social-content {
     justify-content: center;
     padding: 1rem;
 }
 
 .img {
-    position: relative; 
+    position: relative;
 }
 
 .img img {
@@ -19,51 +19,54 @@
 .img .button-outline {
     display: none;
     position: absolute;
-    bottom: 10px;
+    bottom: 13%;
     left: 50%;
     transform: translateX(-50%);
-    
+    padding: 1rem 4rem;
     background-color: #ffffff;
     border: 1px solid #000000;
     color: #000000;
     cursor: pointer;
 }
 
-.img{
-    transition: 0.4s;
+.img::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4); /* Semi-transparent dark layer */
+    opacity: 0; /* Initially hidden */
+    transition: opacity 0.4s; /* Transition for smooth fade-in/out */
 }
 
 .img:hover .button-outline {
     display: block;
 }
 
-.img:hover{
-    opacity: 0.6;
+.img:hover::before {
+    opacity: 1; /* Fade in the dark layer on hover */
 }
 
-@media screen and (max-width: 1310px){
-    .social-content{
-        flex-direction: column; 
-        padding: 1rem;   
+@media screen and (max-width: 1310px) {
+    .social-content {
+        flex-direction: column;
+        padding: 1rem;
     }
-    
 }
-@media screen and (max-width: 700px){
-    .section_title{
+
+@media screen and (max-width: 700px) {
+    .section_title {
         text-align: center;
     }
 }
-@media screen and (max-width: 650px){
-    .social-container{
+
+@media screen and (max-width: 650px) {
+    .social-container {
         flex-direction: column;
     }
-    .social-button{
+    .social-button {
         display: none;
     }
 }
-
-
-
-
-
-
