--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -97,6 +97,10 @@ option{
        
     }
     
+    img.footer-logo{
+        width: 133px;
+    }
+    
 }
 
 @media screen and (max-width: 900px){
@@ -105,6 +109,8 @@ option{
         gap: 1rem;
        
     }
+
+   
     .footer-info{
         flex-direction: row;
         justify-content: space-between;
