--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -15,6 +15,9 @@
     transition: background 0.7s ease-in-out; /* Updated to transition the entire background property */
 }
 
+img.image-transition {
+    width: 542px;
+}
 
 .home-section.clicked {
     transition-delay: 1s; /* Changed the transition delay to 1 second */
@@ -72,6 +75,7 @@
     flex-direction: column;
     align-items: center;
 }
+
 
 .products {
     display: flex;
