--- a/src/components/social/social.css
+++ b/src/components/social/social.css
@@ -22,7 +22,7 @@
     bottom: 13%;
     left: 50%;
     transform: translateX(-50%);
-    padding: 1rem 4rem;
+    padding: 1rem 1.5rem;
     background-color: #ffffff;
     border: 1px solid #000000;
     color: #000000;
@@ -35,10 +35,11 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 98%;
     background-color: rgba(0, 0, 0, 0.4); /* Semi-transparent dark layer */
     opacity: 0; /* Initially hidden */
-    transition: opacity 0.4s; /* Transition for smooth fade-in/out */
+    transition: opacity 0.4s;
+    border-radius: 1rem; /* Transition for smooth fade-in/out */
 }
 
 .img:hover .button-outline {
