--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -181,3 +181,9 @@ img.image-transition {
         display: none;
     }
 }
+
+@media screen and (max-width: 512px) {
+    .size img {
+        width: 340px;
+    }
+}
