--- a/src/components/quiz/quiz.css
+++ b/src/components/quiz/quiz.css
@@ -20,7 +20,7 @@
     border-radius: 1rem;
     padding: 1rem;
     border-top-right-radius: 10rem;
-    justify-content: space-between;
+    justify-content: space-evenly;
     
 }
 
